--- a/css/style.css
+++ b/css/style.css
@@ -9461,9 +9461,8 @@ a.text-dark:hover, a.text-dark:focus {
   font-weight: 500 !important;
 }
 
-.mb-30 {
-  margin-bottom: 30px;
-}
+  
+
 
 .pb-30 {
   padding-bottom: 30px;
@@ -9538,14 +9537,14 @@ a.text-dark:hover, a.text-dark:focus {
   width: 15px;
   height: 15px;
   margin: 0 3px 12px 3px;
-  background: transparent;
-  border: 1px solid #FFFFFF;
+  background: #16181b;
+  border: 2px solid #b1dfbb;
   transition: .5s;
 }
 
 .carousel-indicators .active {
   width: 30px;
-  background: #FFFFFF;
+  background: var(--yellow);
 }
 
 .carousel-caption {
@@ -9559,12 +9558,12 @@ a.text-dark:hover, a.text-dark:focus {
 
 .section-title::after {
   position: absolute;
+  direction: rtl;
   content: "";
   width: 100%;
   height: 0;
   top: 50%;
-  left: 0;
-  border-top: 1px dashed #bec5cb;
+  right: 0;
   z-index: -1;
 }
 
@@ -9711,3 +9710,85 @@ a.text-dark:hover, a.text-dark:focus {
     transform: translateY(-15px);
   }
 }
+/*00000000000000000000000000000000000000000000*/
+/*** Category ***/
+.cat-item div {
+  background: #FFFFFF;
+  border: 1px dashed rgba(0, 185, 142, .3);
+  transition: .5s;
+}
+
+.cat-item:hover div {
+  background: var(--primary);
+  border-color: transparent;
+}
+
+.cat-item div * {
+  transition: .5s;
+}
+
+.cat-item:hover div * {
+  color: #FFFFFF !important;
+}
+
+
+/*** Property List ***/
+.nav-pills .nav-item .btn {
+  color: var(--dark);
+}
+
+.nav-pills .nav-item .btn:hover,
+.nav-pills .nav-item .btn.active {
+  color: #FFFFFF;
+}
+
+.property-item {
+  box-shadow: 0 0 30px rgba(0, 0, 0, .08);
+}
+
+.property-item img {
+  transition: .5s;
+}
+
+.property-item:hover img {
+  transform: scale(1.1);
+}
+
+.property-item .border-top {
+  border-top: 1px dashed rgba(0, 185, 142, .3) !important;
+}
+
+.property-item .border-end {
+  border-right: 1px dashed rgba(0, 185, 142, .3) !important;
+}
+
+
+/* contact*/
+.contact-block .form-group .form-control {
+  height: 45px;
+  font-size: 16px;
+  border: 0;
+  padding: 6px 15px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.contact-block .form-group textarea.form-control {
+  height: 150px;
+  padding-top: 15px;
+}
+.left-contact {
+  margin-top: 60px;
+}
+
+  .left-contact h2 {
+      font-size: 38px;
+      font-weight: 700;
+      padding-bottom: 30px;
+      text-align: center;
+  }
